<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:background="@drawable/background_top_block"
    android:orientation="vertical">

    <TextView
        style="@style/TextViewInAlertDialog"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/log_in" />

    <EditText
        android:id="@+id/name_user_enter"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rounded_edittext"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <TextView
        style="@style/TextViewInAlertDialog"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/password_user_enter"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rounded_edittext"
        android:paddingLeft="10dp"
        android:inputType="textPassword"
        android:paddingRight="10dp" />

    <LinearLayout
        android:gravity="end"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/btn_cancel"
            android:text="@string/cancel"
            style="@style/TextViewInAlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/btn_log_in"
            android:text="@string/login"
            style="@style/TextViewInAlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="50dp" />

    </LinearLayout>

</LinearLayout>