<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/black"
              android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <EditText
        android:background="@color/accent"
        android:textSize="30dp"
        android:id="@+id/search_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:checked="true"
                android:text="@string/artist"
                android:textColor="@color/white"
                android:id="@+id/radio_btn_artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:textColor="@color/white"
                android:text="@string/album"
                android:id="@+id/radio_btn_album"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:textColor="@color/white"
                android:text="@string/track"
                android:id="@+id/radio_btn_track"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </RadioGroup>

        <LinearLayout
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="@string/search"
                style="@style/ButtonStyle"
                android:id="@+id/btn_search_click"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/search_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>